

****************************** DRUPAL 7 - 2.x BRANCH ********************************

April 03, 2011
--------------
Issue #1114334 by niklas: Added a configure link on the module page.

March 31, 2011
--------------
Issue #1111218 by troky: Fixed notice when comment links missing.
Issue #1111856 by troky: Removed "Last Post" button when there are no comments/replies.

March 30, 2011
--------------
Issue #1109820 by troky: Fixed broken link to new posts in subforums.

March 29, 2011
--------------
Issue #1109114 by troky: Fixed and improved styles and templates handling code.

March 28, 2011
--------------
Issue #1105218 by troky: Fixed subcontainer theme rendering.

March 25, 2011
--------------
Issue #1104832 by troky: Fixed hook_views_api() initialization and some other Views related stuff.

March 24, 2011
--------------
Issue #1102510 by troky: Changed post_* and comment_* class names to match D7 core classes. Synced with commit #60bc64a.
Issue #1044322 by rcurtin, Michelle: Fixed topic listing icon not showing new posts on brand new topics.
Issue #1104314 by troky: Fixed problem with styling node types other than forum.

March 22, 2011
--------------
Issue #1096090 by Michelle: Initialized items property of  to avoid notices when a container is empty. Undoing fix from #1088836.
Issue #1100054 by troky: Fixed strict warning: Creating default object from empty value in _advanced_forum_preprocess_forum_list().

March 20, 2011
--------------
#1098542 by lasac: Fixed IE javascript bug in collapsible containers code.
#1088836 by troky: Fixed notices about undefined arrays in forum list preprocess.

March 07, 2011
--------------
#291084 by Michelle: Moved collapsible containers option to correct fieldset.
#291084 by troky: More JavaScript code cleanup.

March 05, 2011
--------------